Corrected nowrap constraint to <h1>

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -129,7 +129,7 @@ a {
 }
 
 h1 {
-    text-wrap: nowrap;
+    white-space: nowrap;
 }
 #project-detail {
     background: rgba(33, 32, 29, 0.8);
